Closed
Bug 257555
Opened 21 years ago
Closed 21 years ago
Eudora import drops first line of some x-flowed or x-rich messages
Categories
(Thunderbird :: Migration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.8
People
(Reporter: kelson, Assigned: mscott)
Details
Attachments
(1 file)
|
3.46 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7) Gecko/20040803 Firefox/0.9.3
Build Identifier: Thunderbird version 0.6+ (20040831)
If the opening <x-flowed> or <x-rich> tag (used by Eudora to indicate content
type) is not on its own line, Thunderbird will discard the entire line instead
of just the tag.
This will probably happen with <x-html> also, but all the HTML messages in my
mail corpus have the tag on a separate line.
Reproducible: Always
Steps to Reproduce:
1. Start with Eudora messages containing <x-rich> or <x-flowed> content.
2. Check to see that some of them start the actual content on the same line as
the opening tag.
3. Import into Thunderbird.
Actual Results:
First line of message is missing, even in View Source.
Expected Results:
Entire message should be preserved.
This appears to be related to the fix for bug 3157.
I definitely have messages where content appears on the same line as the opening
<x-flowed> or <x-rich> tag. I don't see any with <x-html> sharing a line, but it
wouldn't surprise me if it happens. Also, the closing tag is on its own line in
all my messages, but I wouldn't assume that content never appears there.
| Assignee | ||
Updated•21 years ago
|
Target Milestone: --- → Thunderbird0.9
| Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 1•21 years ago
|
||
This patch assumes that the tag is always at the start of a new line.
Kevin, if I put this onto a trunk build today, would you be able to test it on
your Eudora folders tomorrow (Wednesday) morning? If it looks good, I'd like to
get it into the 0.8 branch since migration is a big advertising point of 0.8.
I tested it on my end by modifing some eudora mailboxes that had <x-html> tags
to have content on the same line as the tag and it looked like it did the right
thing.
| Assignee | ||
Comment 2•21 years ago
|
||
Kelson, I checked in this posssible fix into the trunk builds. It will show up
in the 09/08 builds here:
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-trunk/
Any chance you can try it out and see if it works and doesn't break any of your
other eudora messages when migrating/importing? If it looks good I'll move it to
the aviary branch.
Scott: I just tried it with today's build, and it looks good. All the problem
messages come through correctly now, and I did some spot-checking of other
x-flowed and x-html messages and they look fine.
(Actually, some of the x-flowed messages have a blank line at the beginning, but
for all I know they were written that way. Either that or Eudora is just
inconsistent about whether it adds a newline at the end of the tag. Maybe it
depends on the version -- I've certainly upgraded enough times with this set of
mail.)
In any case, it looks like you've solved the the missing lines issue, and I'd
rather have an extra blank line than lose part of the message!
| Assignee | ||
Comment 4•21 years ago
|
||
I'm probably leaving a blank line for the case where the tag is on a line by
itself, we probably end up leaving the blank line. I think I'll still run with
this patch. Thanks so much for the debugging help and for spot checking other
messages so it didn't break anything!
I'll put this into aviary.
| Assignee | ||
Comment 5•21 years ago
|
||
this is now fixed on the aviary branch too.
If I have more time I'll try to eat the empty line we leave behind....
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: Thunderbird0.9 → Thunderbird0.8
You need to log in
before you can comment on or make changes to this bug.
Description
•