Bug #257555 --> when importing eudora mailboxes with special eudora tags like <x-flowed>, just remove the tag and not the entire line of text.